--- a/_site.yml
+++ b/_site.yml
@@ -7,3 +7,7 @@ navbar:
       href: index.html
     - text: "About Me"
       href: about.html
+    - text: "Resume"
+      href: cv.html
+    - text: "Projects"
+      href: projects.html
