--- a/_site.yml
+++ b/_site.yml
@@ -8,6 +8,11 @@ navbar:
     - text: "About Me"
       href: about.html
     #- text: "Resume"
-    #  href: cv.html
+    #  href: /cv/cv.html
     - text: "Projects"
       href: projects.html
+output:
+  html_document:
+    css: style.css
+    theme: spacelab
+    
