--- a/_site.yml
+++ b/_site.yml
@@ -10,7 +10,7 @@ navbar:
     - text: "About"
       href: about.html
     - text: "Resume"
-      href: https://drive.google.com/file/d/1Ovwo79nQsklCJ9VDIA3fm_UPsmLeqyJM/view?usp=sharing
+      href: https://docs.google.com/document/d/1Hoe1nAYz-JiKdfV76ppUIxGoOkSn89bs/edit?usp=sharing&ouid=114717442966768718159&rtpof=true&sd=true
     
   right:
     - icon: fab fa-linkedin
